<resources>
    <string name="app_name">LasHuequitasApp</string>
    <string name="crear_una_cuenta">Crear una Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="preferencias_gastronomicas">Preferencias gastronómicas</string>
    <string name="cuentanos_sobre_platillos">Cuéntanos un poco sobre tus platillos favoritos</string>
    <string name="italiana">Italiana</string>
    <string name="mexicana">Mexicana</string>
    <string name="china">China</string>
    <string name="japonesa">Japonesa</string>
    <string name="ecuatoriana">Ecuatoriana</string>
    <string name="peruana">Peruana</string>
    <string name="rapida">Rápida</string>
    <string name="costena">Costeña</string>
    <string name="venezolana">Venezolana</string>
    <string name="arabe">Árabe</string>
    <string name="registrarme">Registrarme</string>
    <string name="cerrar">Cerrar</string>
    <!--  Rango de Precio  -->
    <string-array name="rango_precio">
        <item>Barato</item>
        <item>Moderado</item>
        <item>Caro</item>
    </string-array>
    <!--  Tipo de Comida  -->
    <string-array name="tipo_comida">
        <item>Mexicana</item>
        <item>Italiana</item>
        <item>Rápida</item>
        <item>Vegetariana</item>
    </string-array>
    <string name="hint_titulo_resena">Titulo Resena</string>
    <string name="hint_nombre_restaurante">Nombre Restaurante</string>
    <string name="hint_ubicacion">Ubicación</string>
    <string name="hint_subir_imagen">Subir Imagen</string>
    <string name="title_calificacion">Calificación</string>
    <string name="title_fotografia">Fotografías</string>
    <string name="title_subir">Agrega una foto de tu comida</string>
    <string name="title_populares">Populares</string>
    <string name="hintPrecio">$$ • Rápida</string>
    <string name="hintPrecio2">$ • Rápida</string>
    <string name="btn_subir">Subir</string>
    <string name="back_button">Volver</string>
    <string name="textoPantallaInicioTitulo">Las HueQuitas</string>
    <string name="textoInferiorPantallaInicio">Descubre, califica y comparte experiencias</string>
    <string name="textButtonComenzar">Comenzar</string>
    <string name="textInicioDeSesion">Inicio de Sesión</string>
    <string name="textoBienvenido">¡Bienvenido de nuevo!</string>
    <string name="textoUsuarioEmail">Usuario/Email</string>
    <string name="textoContraseña">Contraseña</string>
    <string name="textoOlvidasteC">¿Olvidaste tu contraseña?</string>
    <string name="textoBotonIniciarSesion">Iniciar Sesión</string>
    <string name="textoEresNuevo">¿Eres nuevo en Las HueQuitas?</string>
    <string name="textoCrearCuenta">Crea una cuenta aquí</string>
    <string name="textRecuperarC">Recuperar Contraseña</string>
    <string name="textoIngresaE">Ingresa tu Email</string>
    <string name="textoEmail">Email</string>
    <string name="textoNuevaC">Nueva Contraseña</string>
    <string name="textoRepetirC">Repetir Contraseña</string>
    <string name="textoActualizar">Actualizar</string>


    <string name="Name_Home">LasHueQuitas</string>

    <string name="restaurante_uno">Queso Te Sirva de Experiencia</string>
    <string name="restaurante_dos">Restaurante San Francisco</string>
    <string name="restaurante_tres">Restaurante Las Cuadras</string>
    <string name="restaurante_cuatro">Cafetería El Diavolo</string>
    <string name="restaurante_cinco">San Luis Coffe Bar</string>
    <string name="restaurante_seis">Restarurante La Floresta</string>
    <string name="restaurante_siete">Como en Casa Restaurante"</string>
    <string name="restaurante_ocho">Date Un Gusto Restaurant"</string>
    <string name="restaurante_nueve">El Botero Coffee Bar"</string>
    <string name="restaurante_diez">Pizzería Los Tios"</string>
    <string name="nueva_resena">Nueva Reseña</string>
    <string name="cantidad_resenas1">54 reseñas</string>
    <string name="puntuacion2">4.2</string>
    <string name="puntuacion3">4.8</string>


    <string name="puntuacion">4.5</string>
    <string name="resenas">2 reseñas</string>
    <string name="resenas2">87 reseñas</string>
    <string name="resenas3">157 reseñas</string>
    <string name="resenas4">215 reseñas</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="correo_ejemplo_com">correo@ejemplo.com</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>


    <string name="opciones">Opciones</string>
    <string name="buscar_restaurantes">Buscar por restaurantes o platillos</string>
    <string name="recomendados">Recomendados</string>
    <string name="populares">Populares</string>
    <string name="home">Inicio</string>
    <string name="postear">Postear</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>

    <string name="search_hint">Restaurantes o platillos</string>

    <string name="usuarioNombre">Jombriel Guerra</string>
    <string name="jombriel">Jombriel</string>
    <string name="guerra">Guerra</string>
    <string name="usuarioEmail">jombguerra@gmail.com</string>
    <string name="usuarioUsername">jombriel.newblood.69</string>
    <string name="resenasPerfil">12 Reseñas</string>
    <string name="cantidadEstrellas">48</string>
    <string name="recibidas">Recibidas</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="preferencias">Preferencias</string>
    <string name="resenasRecientes">Reseñas recientes</string>
    <string name="previewResena">¡Excelente comida y atención!</string>
    <string name="subirImagen">Subir Imagen</string>
    <string name="agregaFotoPerfil">Agrega una foto de perfil</string>
    <string name="agregarComentario">Agregar comentario</string>
    <string name="calificarResena">Calificar Reseña</string>
    <string name="escribeTuComentario">Escribe tu comentario...</string>
    <string name="escribeTuOpinion">Escribe tu opinión...</string>
    <string name="restaurantes_recomendados">Restaurantes recomendados</string>
    <string name="restaurant">Restaurante</string>
    <string name="view_review">Ver Reseñas</string>
    <string name="view_review_details">Ver Reseña</string>
    <string name="view_restaurantes">Ver Restaurantes</string>
    <string name="_5">5</string>
    <string name="_50">50%</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="calificacion_Restaurante_2">4.6</string>
    <string name="reviews_Restaurante_2">· 89 reseñas</string>
    <string name="califcacion_Restuarante_3">4.0</string>
    <string name="reviews_Restaurante_3">· 120 reseñas</string>
    <string name="julia_name">Julia Pérez</string>
    <string name="julia_time">hace 2 meses</string>
    <string name="julia_desc">¡La comida estaba absolutamente deliciosa! Pedí la pasta carbonara y estaba cocinada a la perfección. El servicio también fue excelente, y el personal fue muy amable y atento. Recomiendo ampliamente este restaurante.</string>
    <string name="jose_name">José Armas</string>
    <string name="jose_time">hace 2 semanas</string>
    <string name="jose_desc">Tuve una experiencia fantástica en este restaurante. La comida estaba deliciosa y el ambiente era agradable. El único inconveniente fue que el servicio fue un poco lento, pero en general, lo recomiendo.</string>
    <string name="laura_name">Laura Montenegro</string>
    <string name="laura_time">hace 6 días</string>
    <string name="laura_desc">La atención fue amable, pero el plato principal no cumplió mis expectativas. La comida estaba fría y seca. Quizá fue un mal día del chef.</string>
    <string name="reviews_title">Reseñas</string>
    <string name="review_title">Reseña</string>
    <string name="title_review">Sabores como los de casa</string>
    <string name="desc_review">A pesar de la apariencia un tanto “extraña” de la comida, refiriéndome a su presentación, logró sorprenderme, fue como aquellos sánduches que hacía mi mamá para llevar a la escuela, fue una experiencia muy conmovedora.</string>
    <string name="comments">Comentarios</string>
    <string name="time_user_jombriel">2d</string>
    <string name="jombriel_reply">Concuerdo contigo. Sus sánduches siempre me han logrado sorprender.</string>
    <string name="alejandro_user">Alejandro Vargas</string>
    <string name="time_user_alejandro">1d</string>
    <string name="alejandro_reply">¿En serio son tan buenos? Supongo que me daré el tiempo de ir a probarlos.</string>
    <string name="add_comment">Agregar comentario</string>
    <string name="no_reviews_icon">No hay reseñas disponibles</string>
    <string name="agregar_favoritos">Agregar a Favoritos</string>
    <string name="puntuacion_format">%.1f</string>
    <string name="resenas_format">(%d Reseñas)</string>
    <string name="placeholder_restaurant">Placeholder Restaurant Image</string>
    <string name="no_restaurants_available">No hay restaurantes disponibles en este momento.</string>
    <string name="no_search_results">No se encontraron resultados.</string>
    <string name="no_recommendations_available">No hay recomendaciones disponibles para tus preferencias.</string>
    <string name="login_for_recommendations">Inicia sesión para ver recomendaciones personalizadas.</string>
    <string name="no_preferences_set">Define tus preferencias gastronómicas para obtener recomendaciones.</string>
    <string name="precio_no_disponible">Precio no disponible</string>
    <string name="imagen_resena">imagen_reseña</string>
    <string name="actualizar_foto_de_perfil">Actualizar foto de perfil</string>
    <string name="camera">Cámara</string>
    <string name="galery">Galería</string>
    <string name="nombre_del_restaurante">Nombre del Restaurante</string>
    <string name="no_hay_comentarios">No hay comentarios aún.</string>
    <string name="nombre_del_usuario">Nombre del Usuario</string>
    <string name="contenido_del_comentario">Contenido del comentario</string>
    <string name="nombre_restaurante">Nombre Restaurante</string>
    <string name="eliminar_imagen">Eliminar imagen</string>
    <string name="ttulo__resena">Título de la reseña</string>

</resources>