<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="900dp"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@color/lateral_frame">

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="45dp"
        app:cardElevation="4dp">
        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD"
            android:scaleType="centerCrop"
            android:src="@drawable/perfilexam"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_usuario"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_ejemplo_com"
        android:textSize="14sp"
        android:textColor="@color/brown_reviewsDescription_textIcons_profileDetails"
        android:fontFamily="@font/plus_jakarta_sans"
        android:layout_marginBottom="32dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCerrarSesion"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        app:icon="@drawable/exit"
        android:fontFamily="@font/plus_jakarta_sans"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        android:text="@string/cerrar_sesi_n"
        android:textColor="@color/brown_reviewsDescription_textIcons_profileDetails" />
</LinearLayout>